cabal-version: 1.12

name:           pixel-printer
version:        0.1.0
description:    Please see the README on GitHub at <https://github.com/githubuser/pixel-printer#readme>
homepage:       https://github.com/githubuser/pixel-printer#readme
bug-reports:    https://github.com/githubuser/pixel-printer/issues
author:         Zachary Sarver
maintainer:     Zachary.Sarver@gmail.com
copyright:      2021 Zachary Sarver
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
category: Image
synopsis: A program for turning pixel art into 3D prints

source-repository head
  type: git
  location: https://github.com/githubuser/pixel-printer

library
  exposed-modules:
      PixelTransform,
      Geometry,
      Scad
  other-modules:
      Paths_pixel_printer
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && < 5
    , JuicyPixels >= 3.3 && < 3.4
    , lens >= 4.19 && < 5
  default-language: Haskell2010

executable pixel-printer-exe
  main-is: Main.hs
  other-modules:
      Paths_pixel_printer
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , pixel-printer
    , JuicyPixels >= 3.3 && < 3.4
  default-language: Haskell2010

test-suite pixel-printer-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_pixel_printer
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , pixel-printer
  default-language: Haskell2010
